# fisheye_classify

./: .gitignore  README.md  datasets.dvc  debug.py  requirements.txt  run.sh  split_folder.py  train.py  utils.py
.dvc/: config
cpp/: CMakeLists.txt  README.md  engine.cpp  engine.h  export.cpp  extensions.cpp  infer.cpp  setup.py  test_engine_gender.py  test_engine_greeting.py  test_engine_staff.py  test_image.py  utils.py
models/: __init__.py
scripts/: export_onnx.py  test_flops.py  test_onnx.ipynb  test_onnx.py  test_transforms.py
